# mai_oop_lab_05

./: .gitignore  CMakeLists.txt  README.md
include/: List.h  MemoryResource.h
src/: MemoryResource.cpp  main.cpp
tests/: test.cpp
